--- a/css/extranet.css
+++ b/css/extranet.css
@@ -6,4 +6,13 @@
 	border-style: solid;
 	border-color:red;
     border-radius: 10px;
+    padding-right: 10px;
+    padding-left: 10px;
+    margin-right: 20px;
+}
+
+.image_centrale {
+	background-image: url("./assets/adjan-logo.png");
+    margin-left: auto;
+    margin-right: auto;
 }
