--- a/css/extranet.css
+++ b/css/extranet.css
@@ -1,6 +1,6 @@
 @CHARSET "utf-8";
 
-.nav-item {
+.nav-link {
 	color:white;
 	background-color:black;
 	border-style: solid;
@@ -16,3 +16,4 @@
     margin-left: auto;
     margin-right: auto;
 }
+
